--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -48,9 +48,13 @@
     .md-large {
       font-size: 2rem;
     }
-    .md-small {
+    .md-med {
       font-size: 1.2rem;
     }
+    .md-sm {
+      font-size: 1rem;
+    }
+
     .app-layout > header {
       position: fixed;
       height: 50px;
