Rough hack for faceting ui

--- a/frontend/public/add.html
+++ b/frontend/public/add.html
@@ -13,7 +13,7 @@
     html, body {
       height: 100%;
     }
-    .md-large {
+    .md-lg {
       font-size: 2.4rem;
     }
   </style>
@@ -21,7 +21,7 @@
 <body class="bg-near-white avenir">
 <div class="fl w-100 pa0 ma0">
   <div class="fl w-100 tc orange">
-    <h2><i class="material-icons orange md-large v-mid">bookmark_border</i>TLRL</h2>
+    <h2><i class="material-icons orange md-lg v-mid">bookmark_border</i>TLRL</h2>
   </div>
   <div class="fl w-100 mt2 ph3 tc">
     <h3 class="black-80 fw5 mt1 mb0 pa0" id="title"></h3>
