--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -45,7 +45,7 @@
 
     .w-95 {width: 95%;}
     .w-05 {width: 5%;}
-    .md-large {
+    .md-lg {
       font-size: 2rem;
     }
     .md-med {
@@ -63,7 +63,7 @@
     }
     .app-layout {
       height: 100%;
-      overflow: auto;
+      /* overflow: auto; breaking scrollto top */
       min-height: 100%;
       display: flex;
       flex-direction: column;
